{
    "name": "TouchControls",
    "maps": [
        {
            "name": "Touch",
            "id": "790f07ab-bb5c-4a4a-9b40-e19be73d1102",
            "actions": [
                {
                    "name": "PrimaryFinderPosition",
                    "type": "Value",
                    "id": "ae64eb6b-6990-483c-8b0d-d23e3d239fef",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryFinderPosition",
                    "type": "Value",
                    "id": "6938144f-1d57-4fa3-a367-7e6744f5bfeb",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SecondaryTouchContact",
                    "type": "Button",
                    "id": "145c666c-235f-49ae-a08c-09dc579bdaad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "777864e2-e309-4794-816a-46aaa6e298cd",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "PrimaryFinderPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1c2b049e-18ee-44bb-8eb2-b23e3f826787",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "SecondaryFinderPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac5fe4f8-25a0-4a4d-8450-d755da68137f",
                    "path": "<Touchscreen>/touch1/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mobile",
                    "action": "SecondaryTouchContact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": []
        },
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": []
        }
    ]
}